--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,10 @@
 {
   "name": "J-Video",
-  "version": "1.1",
+  "version": "1.2",
+  "manifest_version": 3,
   "description": "Aisla y descarga videos online",
-  "permissions": ["activeTab", "declarativeContent", "downloads"],
-  "background": {
-    "scripts": ["background.js"],
-    "persistent": false
-  },
-  "page_action": {
+  "permissions": ["activeTab", "downloads", "scripting"],
+  "action": {
     "default_popup": "popup.html",
     "default_icon": {
       "16": "icons/ico16.png",
@@ -21,6 +18,5 @@
     "32": "icons/ico32.png",
     "48": "icons/ico48.png",
     "128": "icons/ico128.png"
-  },
-  "manifest_version": 2
+  }
 }
