--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "name": "J-Video",
-  "version": "2.1",
+  "version": "2.2",
   "manifest_version": 3,
   "description": "Aisla y descarga videos online",
-  "permissions": ["activeTab", "downloads", "scripting"],
+  "permissions": ["activeTab", "downloads", "scripting", "webRequest"],
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
